--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -12,7 +12,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Ecommercia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
